--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li (click)="onSelect(pokemo)" *ngFor="let pokemo of pokemon" >
+  <li (click)="onSelect(i + 1)" *ngFor="let pokemo of pokemon; index as i" >
     {{pokemo.name}}
   </li>
 </ul> 
